@@ -21,13 +21,13 @@
 /* Version parsed out into numeric values */
 /*--start constants--*/
 #define PY_MAJOR_VERSION	2
-#define PY_MINOR_VERSION	6
+#define PY_MINOR_VERSION	7
 #define PY_MICRO_VERSION	0
-#define PY_RELEASE_LEVEL	PY_RELEASE_LEVEL_FINAL
+#define PY_RELEASE_LEVEL	PY_RELEASE_LEVEL_ALPHA
 #define PY_RELEASE_SERIAL	0
 
 /* Version as a string */
-#define PY_VERSION      	"2.6"
+#define PY_VERSION      	"2.7a0"
 /*--end constants--*/
 
 /* Subversion Revision number of this file (not of the repository) */
