@@ -4,6 +4,18 @@ Python News
 
 (editors: check NEWS.help for information about editing NEWS using ReST.)
 
+What's New in Python 2.7 alpha 1
+================================
+
+*Release date: XX-XXX-20XX*
+
+Core and Builtins
+-----------------
+
+Library
+-------
+
+
 What's New in Python 2.6 final
 ==============================
 
